Expose AP bill void HTTP command
